# local-transcribe-cli

./: .gitignore  README.md  _config.yml  local-transcribe-cli.code-workspace  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
scripts/: InstallLocalTranscribe.ps1  Invoke-LocalTranscribe.ps1  LocalTranscribe.ps1  TestLocalTranscribe.ps1  UpdateLocalTranscribe.ps1
src/local_transcribe_cli/: __init__.py  cli.py
tests/: test_cli.py  test_gpu_setup.py  test_integration.py  test_utils.py
